# cidsem

./: CIDSTORE_HANDOFF_README.md  INTEGRATION_STATUS.md  docker-compose.yml  pyproject.toml
.github/workflows/: compatibility.yml
docs/: leximapper-spec.md  zvic-integration.md
docs/spec/: ontology.json
docs/specs/: ontology-schema.md  ontology.json  spec00-intro.md  spec01-data-structures-and-types.md  spec01-intro.md  spec02-context-to-triple-extraction.md  spec03-data-structures-and-types.md  spec03-system-architecture.md  spec04-components-and-functionality.md  spec04-system-architecture.md  spec05-api-design-and-interfaces.md  spec05-components-and-functionality.md  spec06-api-design-and-interfaces.md  spec06-error-handling-and-logging.md  spec07-future-extensions.md  spec08-conclusion.md  spec23-Ontology.md  (+9 more)
scripts/: annotate_corpus_with_cids.py  build_training_set.py  convert_corpus_with_minillm.py  debug_cidstore.py  generate_ontology.py  redis_integration_example.py  renumber_spec23.py
tests/: conftest.py  test_api_backlog.py  test_api_candidate.py  test_api_candidate_infer.py  test_api_validation.py  test_canonicalize.py  test_cidstore_integration.py  test_convert_corpus_minillm.py  test_debug_itemX006.py  test_label_splitting.py  test_llm_classifier_stub.py  test_mapper_llm_integration.py  test_ontology_validation.py  test_pipeline_corpus.py  test_plugin_base.py  test_plugin_numeric.py  test_schema_validation.py  test_spec_ontology_note_and_conformity.py  test_specs_presence.py  test_spo_improved.py  test_spo_mapper.py  test_triple_hash.py  test_wal.py
(+33 files in other folders)
