[tool.poetry]
name = "cidsem"
version = "0.1.0"
description = "CIDSEM pilot components and spec artifacts"

[tool.poetry.dependencies]
python = "^3.14"
jsonschema = "^4.0.0"
zvic = "2025.43.0"
redis = "^4.6.0"


[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
